# blue-machine-demo

./: .gitignore  README.md  main.py  pyproject.toml  test_ollama_tools.py
static/: index.html
voice_bot/: llm.py  server.py  stt.py  tts.py
