[project]
name = "blue-machine-demo"
version = "0.1.0"
description = "Local voice-to-voice chatbot: faster-whisper + qwen3.5:2b + kokoro TTS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.1.0",
    "ollama>=0.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "kokoro>=0.9.4",
    "edge-tts>=7.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_bot"]
