[project]
name = "vox"
version = "0.1.0"
description = "Vox — a fully local voice-to-voice chatbot: faster-whisper + Ollama + kokoro TTS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.1.0",
    "ollama>=0.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "kokoro>=0.9.4",
    "edge-tts>=7.2.7",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "ddgs>=9.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_bot"]
